--- a/src/case-studies/forward-works-viewer/index.html
+++ b/src/case-studies/forward-works-viewer/index.html
@@ -35,7 +35,7 @@ excerpt: Media Suite partnered with North South GIS and Jacobs Engineering Group
       <p>Jacobs provided project leadership and specific domain knowledge, having been involved some of the early prototypes of the system.</p>
       <p>Media Suite designed and developed the web application that allows users to view, analyse and update projects via a web interface.</p>
 
-      <h2 class="lowercase">Core functionality of the viewer includes:</h2>
+      <h2>Core functionality of the viewer includes:</h2>
 
       <p class="space-below-please">
         <span class="fancy-pants-font">Managing projects</span> - via a web interface including the detailing of impacts.<br/>
