--- a/src/case-studies/marlborough-cruise-guide/index.html
+++ b/src/case-studies/marlborough-cruise-guide/index.html
@@ -36,11 +36,11 @@ excerpt: Cruise Guide is the perfect FREE sailing companion for exploring the Ma
     <div class="max-1000 align-left space-below-please">
       <img src="{{ "/img/case-studies/cruise-guide-2.jpg" | prepend: site.baseurl }}" alt="Marlborough Cruise Guide on Android" class="case-study-image-right" />
 
-      <h2 class="lowercase">The Challenge</h2>
+      <h2>The challenge</h2>
       <p>Marlborough District Council (MDC) wanted to better understand how people use the Marlborough Sounds - so that they can continue to develop district plans, build facilities and deliver improved services to meet and protect the needs of their community.</p>
       <p>MDC asked Media Suite to turn a vast amount of data into an engaging and interactive app, providing boaties, holidaymakers and locals with a handy tool for making the most of their time in the Marlborough Sounds.</p>
 
-      <h2 class="lowercase">Key Features</h2>
+      <h2>Key features</h2>
       <ul class="multi-col-list two-col-list">
         <li>Bays and safe anchorages</li>
         <li>Swimming spots</li>
@@ -69,7 +69,7 @@ excerpt: Cruise Guide is the perfect FREE sailing companion for exploring the Ma
         <li>Visitor information</li>
       </ul>
 
-      <h2 class="lowercase">The Hurdles</h2>
+      <h2>The hurdles</h2>
       <p>Mobile coverage is patchy in the Sounds, so the app needed to work offline if needed. To solve this, we collected various nautical charts, aerial photographs and topographical maps, and stitched them together to create a tileserver which operates within the user’s device rather than over the internet (like Google Maps). </p>
 
       <p>We created a backend management system which augments approximately 25 open data sets with supplementary information contributed by MDC administrators and app users. When the app starts up, it pulls all the latest data through.</p>
@@ -78,7 +78,7 @@ excerpt: Cruise Guide is the perfect FREE sailing companion for exploring the Ma
 
       <p>Tidal information is usually limited to the main centres like Picton, so for boaties and travellers exploring the far reaches of the Sounds, tide times are often out by a significant margin. To combat this, we enabled the app to calculate tide offsets for each bay, meaning boaties can check the details of any bay without needing to do complex tidal offset calculations for every spot they intend to visit. Two years of tide predictions are downloaded to the device too, so app users don’t need to be connected to the internet to check the day’s tides.</p>
 
-      <h2 class="lowercase">We Loved</h2>
+      <h2>We loved</h2>
       <p>The Media Suite team is proud of this project; the challenge of combining datasets, tackling user problems then using the same code base to convert the app into a website (<a href="http://www.cruiseguide.co.nz">www.cruiseguide.co.nz</a>) was deeply satisfying.</p>
 
       <p>We used an agile development process with a fixed budget and flexible scope to deliver the project in seven sprints of two weeks. We were proud of the number of features we managed to complete in a short amount of time.</p>
