--- a/src/case-studies/resource-consenting/index.html
+++ b/src/case-studies/resource-consenting/index.html
@@ -35,7 +35,7 @@ excerpt: Resource Consenting delivers a quality user experience while providing 
       <p>Beyond solving some process headaches for council and applicants, the system works to improve the quality of data collected. Information will now be more readily accessible for all stakeholders including public, iwi and resource users as well as local and central government. Access to the same quality information should allow all parties to make more informed decisions.</p>
       <p>The public-facing application portal is now live, with the council processing engine going live at the end of 2018.</p>
 
-      <h2 class="lowercase">The Challenges</h2>
+      <h2>The challenges</h2>
       <p>The resource management domain is complex, and the system needed to solve a number of connected problems, or pain points.</p>
       <p>At a base level, the application process needed improvement. The previous process allowed PDFs to be submitted without any standardised formatting or validation. Due to the complexity and breadth of the RMA legislation, applicants often fell short of providing the relevant information to allow consenting officers to assess or process their applications. Members of the public found it difficult to interpret the Act and supply the correct information in the appropriate format. MDC needed a framework which guided the applicant, educating them on the Act at the same time.</p>
       <p>At the council end, PDFs were proving cumbersome, and could not be easily mined for data. Officers had to manually transpose information into the council systems, using valuable man hours just in content transfer time. Incomplete applications meant time was wasted asking the applicant for further information. PDFs did not provide an easy mechanism for version control.</p>
@@ -47,7 +47,7 @@ excerpt: Resource Consenting delivers a quality user experience while providing 
         <a href="{{ "/img/pdfs/RMA-legislation-diagram.pdf" | prepend: site.baseurl }}" target="_blank" class="drop-btn orange-bg">Download PDF</a>
       </div>
 
-      <h2 class="lowercase">Creating Solutions</h2>
+      <h2>Creating solutions</h2>
       <p>Given the complexity, breadth and dynamic nature of the RMA, the build had several technical challenges to overcome. It also had to serve the needs of many different stakeholders, while also meeting the standards defined in the Act.</p>
       <p>Applicants and agents now apply for their consent using a web-based form, ensuring all information required, is captured. The form dynamically responds to the user’s unique submission criteria, prompting for the required information. A dynamic form engine preserves the original application content, as well as the format in which it was submitted, in line with the applicable legislation version. It can then be recreated at any time from data - marking an end to the reliance on paper-based archives or PDF records.</p>
       <p>Council officers receive complete applications in a consistent format, allowing for faster processing. The output data is compatible with council systems, eliminating manual transfers. The interface is fully responsive, meaning council officers have access on any device.</p>
@@ -56,7 +56,7 @@ excerpt: Resource Consenting delivers a quality user experience while providing 
       <div class="quote-section clearfix">
         <img src="{{ "/img/case-studies/resc-3.png" | prepend: site.baseurl }}" alt="Ewen Cumming" class="quote-image" />
         <div class="quote-container">
-          <h2 class="quote-heading lowercase">Technically Speaking</h2>
+          <h2 class="quote-heading">Technically speaking</h2>
           <p class="quote-opening">Moving the consent application process to an online digital solution presented several key technical challenges, the greatest of which involved incorporating changes to the RMA into new applications, while not changing anything for those already started.</p>
           <p>To tackle the problem, we built a dynamic forms system driven entirely by configuration, that can version forms and recreate them with their original data based on any version. This allows us to preserve the forms as they were at the time of entry and handle the changing consent application process. By capturing the data as it was entered in key points of the process, council officers are able to easily track and compare re-submitted applications, as well as providing very detailed reporting options for every stage of the consent application process.</p>
           <p>On top of the dynamic forms system, we’ve provided a modern single page application using EmberJS and a Python/Django API, giving a great user experience.</p>
@@ -66,14 +66,14 @@ excerpt: Resource Consenting delivers a quality user experience while providing 
         </div>
       </div>
 
-      <h2 class="lowercase">We Loved&hellip;</h2>
+      <h2>We loved&hellip;</h2>
       <p>Solving complex technical problems in the council’s domain. We work with MDC on a number of projects aimed at improving systems, increasing efficiency and promoting transparency. We found the technical, scientific and regulatory domain of the council to be a challenging and rewarding area to work in. The system solves problems faced by all New Zealand councils and we hope other councils can learn from MDC’s digital transformation journey.</p>
       <p>Data with this level of clarity and standardisation, provided in a short time frame, is a game changer at a regional and national level. Media Suite loves contributing to the social good, in this case by building a tool which allows society to make better decisions based on more relevant and recent data, as well as improving the experience for consent applicants, agents and council staff.</p>
 
       <div class="quote-section clearfix">
         <img src="{{ "/img/case-studies/resc-4.png" | prepend: site.baseurl }}" alt="Marlborough District Council" class="quote-image" />
         <div class="quote-container">
-          <h2 class="quote-heading lowercase">The council says&hellip;</h2>
+          <h2 class="quote-heading">The council says&hellip;</h2>
           <p class="quote-opening">I’ve found the project team to be extremely professional, helpful and suggestive, and more than adaptive to the changing scope of work - especially important given the project, by nature, is very, very complex.</p>
           <p>We are, through good design, simplifying the [application] process, and improving understanding through intuitive design and smart, clean user experiences.</p>
           <p>By virtue of the agile nature in which we work, changes are seamlessly picked up and melded with the work - all combining to form, at this early stage, a project that’s delivering and hitting expectations early and hard.</p>
