--- a/src/case-studies/appraisal-connector/index.html
+++ b/src/case-studies/appraisal-connector/index.html
@@ -30,13 +30,13 @@ excerpt: Interlead chose Media Suite to develop the software behind Appraisal Co
     <img src="{{ "/img/case-studies/interlead-1.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
     <div class="max-1000 align-left space-below-please">
-      <h2 class="lowercase">The Challenge</h2>
+      <h2>The challenge</h2>
       <p>After years of <span class="fancy-pants-font">educational research</span> and following guidelines established by the New Zealand Ministry of Education, InterLEAD consultants developed the philosophy and ideas behind the Appraisal Connector&trade;.</p>
       <p class="space-below-please">Media Suite were able to capture that philosophy and develop an <span class="fancy-pants-font">intuitive web interface</span> that streamlines the review process, allowing teachers and schools to focus on continued professional development.</p>
 
       <img src="{{ "/img/case-studies/interlead-2.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
-      <h2 class="lowercase">Core Features</h2>
+      <h2>Core features</h2>
       <p class="space-below-please">
         <span class="fancy-pants-font">Appraisal Scheduling</span><br/>
         <span class="fancy-pants-font">Professional Journals &amp; Goal Setting</span><br/>
