--- a/src/case-studies/myworksites/index.html
+++ b/src/case-studies/myworksites/index.html
@@ -50,7 +50,7 @@ excerpt: Media Suite partnered with roadworking authorities to build MyWorksites
         <li>Remote access for system users, allowing on-site updates and real time project information to be communicated.</li>
       </ul>
 
-      <h2 class="lowercase">Background</h2>
+      <h2>Background</h2>
       <p>MyWorksites <em>really</em> began in 2011 in post-quake Christchurch. On a flight from Auckland to Christchurch, Robyn Gardner (then of Christchurch City Council) quite literally sketched out her idea on the back of a napkin.</p>
       <p>TMP for Christchurch, as it was then called, was a system designed to process the Traffic Management Plans being submitted as part of the post-quake rebuild effort. The volume of TMPs had increased tenfold, almost overnight, and the existing paper-based systems at Christchurch City Council couldn’t cope as the repair effort got under way.</p>
       <p>Additionally, NZTA and CCC needed a way to help the public navigate a city now dominated by daily road changes due roadworks and associated disruption. The key to the original system’s success, was that it made the planned works of every company or organisation more transparent. This led to widespread collaboration in the industry and has been credited as one of the key tools that helped keep Christchurch moving post-quake - <a href="{{ "/img/pdfs/mws-case-study.pdf" | prepend: site.baseurl }}" target="_blank">but don’t just take our word for it</a>.</p>
@@ -60,14 +60,14 @@ excerpt: Media Suite partnered with roadworking authorities to build MyWorksites
 
       <img src="{{ "/img/case-studies/mws-2.jpg" | prepend: site.baseurl }}" alt="MyWorksites screenshot" class="case-study-image image-max-100 space-below-please" />
 
-      <h2 class="lowercase">Seeing the future</h2>
+      <h2>Seeing the future</h2>
       <p>While MyWorksites provides an essential set of tools for everyone working on New Zealand roads, it also serves a higher purpose, providing a real time picture of a city’s roads and public spaces. This data can be used to minimise traffic congestion, plan for events that significantly impact the city’s traffic movement, and allow contractors across company and sector lines to collaborate before they dig.</p>
       <p>By sharing information, contractors could work together to reduce spend and minimise disruption. Using MyWorksites, expected roadworks (maintenance, planned works etc) could be scheduled years in advance. A clear picture of future works would assist councils to allocate budgets in long term plans, collaborate on larger works, and anticipate traffic impacts.</p>
 
       <div class="quote-section clearfix">
         <img src="{{ "/img/case-studies/mws-3.png" | prepend: site.baseurl }}" alt="Jonathan Prince" class="quote-image" />
         <div class="quote-container">
-          <h2 class="quote-heading lowercase">Technically Speaking</h2>
+          <h2 class="quote-heading">Technically speaking</h2>
           <p class="quote-opening">A lot of useful functionality in this application is provided through maps. The foundation for our mapping is the Leaflet framework. We build on this using custom UI components to provide a tailored experience in order to meet the varying needs of each use-case. We couple this with some clever geospatial wrangling on the backend, with our good friend PostGIS taking care of the heavy lifting. We also use information and tools from the OpenStreetMaps project for detailed information on road specifications and routing.</p>
           <p>Our backend is built around a NodeJS server and PostgreSQL/GIS database. Alongside the main application server are several smaller services set up to handle PDF generation, street routing and a mail queue. We run all backend services inside Docker containers, running as a cluster on the Amazon Container Service.</p>
           <p class="quote-closing">
