--- a/src/case-studies/transport-for-christchurch/index.html
+++ b/src/case-studies/transport-for-christchurch/index.html
@@ -34,11 +34,11 @@ excerpt: In the wake of the Canterbury earthquakes, Media Suite was engaged by t
     </div>
 
     <div class="max-1000 align-left space-below-please">
-      <h2 class="lowercase">The Challenge</h2>
+      <h2>The challenge</h2>
       <p class="space-below-please">Initially the availability of data was limited to roadworks and road closures however over the last 4 years Media Suite has worked with CTOC to develop strategies and tools for collecting, augmenting and communicating a broad range of traveller information to the public via a range of channels. </p>
       <img src="{{ "/img/case-studies/tfc-2.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
-      <h2 class="lowercase">Many Solutions</h2>
+      <h2>Many solutions</h2>
       <p class="space-below-please">The engagement with CTOC and NZTA has led us to develop tools for coordinating roadworks, broadcasting incidents, publishing to social media, measuring journey times and congestion as well as building APIs to open data to other developers. Many of these tools are now being utilised nationally.</p>
 
     </div>
