--- a/src/our-services/index.html
+++ b/src/our-services/index.html
@@ -46,7 +46,7 @@ isfullheight: true
         <img src="{{ "/img/services/ideation@2x.png" | prepend: site.baseurl }}" alt="" />
       </div>
       <div class="service-text">
-        <h2 class="lowercase service-heading">Ideation</h2>
+        <h2 class="service-heading">Ideation</h2>
         <p>Generating, developing and communicating ideas excites us. We are able to draw on <span class="fancy-pants-font">decades of experience</span> working with hundreds of great organisations to examine, refine and <span class="fancy-pants-font">innovate on your ideas</span>.</p>
       </div>
     </div>
@@ -57,7 +57,7 @@ isfullheight: true
         <img src="{{ "/img/services/analysis@2x.png" | prepend: site.baseurl }}" alt="" />
       </div>
       <div class="service-text">
-        <h2 class="lowercase service-heading">Analysis</h2>
+        <h2 class="service-heading">Analysis</h2>
         <p>We thrive on teasing out requirements from stakeholders, prioritising using <span class="fancy-pants-font">value driven methods</span> and fleshing out enough detail to ensure you're <span class="fancy-pants-font">building the right thing</span>.</p>
       </div>
     </div>
@@ -68,7 +68,7 @@ isfullheight: true
         <img src="{{ "/img/services/design.jpg" | prepend: site.baseurl }}" alt="" />
       </div>
       <div class="service-text">
-        <h2 class="lowercase service-heading">Design</h2>
+        <h2 class="service-heading">Design</h2>
         <p><span class="fancy-pants-font">Thoughtful design</span> is an art form. It is the intersection of strategy, research and analysis with user interface and experience expressed as a visual design.</p>
       </div>
     </div>
@@ -79,7 +79,7 @@ isfullheight: true
         <img src="{{ "/img/services/dev.jpg" | prepend: site.baseurl }}" alt="" />
       </div>
       <div class="service-text">
-        <h2 class="lowercase service-heading">Development</h2>
+        <h2 class="service-heading">Development</h2>
         <p>Our <span class="fancy-pants-font">multi-disciplined</span> development teams are nimble. Working closely with you to gain feedback they will help you make smart choices and <span class="fancy-pants-font">respond to change</span> throughout your project.</p>
       </div>
     </div>
@@ -90,7 +90,7 @@ isfullheight: true
         <img src="{{ "/img/services/deployment@2x.png" | prepend: site.baseurl }}" alt="" />
       </div>
       <div class="service-text">
-        <h2 class="lowercase service-heading">Deployment</h2>
+        <h2 class="service-heading">Deployment</h2>
         <p>Whether deploying to the cloud, your data centre or to the app store - <span class="fancy-pants-font">we've got you covered</span> around the clock. We work extensively with cloud providers and local hosting companies to ensure your project is scalable and available.</p>
       </div>
     </div>
@@ -101,7 +101,7 @@ isfullheight: true
         <img src="{{ "/img/services/marketing@2x.png" | prepend: site.baseurl }}" alt="" />
       </div>
       <div class="service-text">
-        <h2 class="lowercase service-heading">Marketing</h2>
+        <h2 class="service-heading">Marketing</h2>
         <p>Successful products are often a balance between solving a problem, an interface the customer can relate to and effective marketing. Our belief is that <span class="fancy-pants-font">marketing should start from within</span> and your users are your best salespeople. As well as developing your product we can also help take it to market.</p>
       </div>
     </div>
@@ -112,7 +112,7 @@ isfullheight: true
         <img src="{{ "/img/services/support@2x.png" | prepend: site.baseurl }}" alt="" />
       </div>
       <div class="service-text">
-        <h2 class="lowercase service-heading">Support</h2>
+        <h2 class="service-heading">Support</h2>
         <p>We will be around for the long haul ready to support and <span class="fancy-pants-font">maintain your software through its evolution</span>. Our support team can provide support to your users as well as proactive management of your software and hosting.</p>
       </div>
     </div>
