Add data.govt case study to landing pages

--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -11,25 +11,25 @@ menuorder: 2
 
     <div class="case-study-items">
 
-        <div id="csi-dgnz" class="case-study-item clearfix">
-          <a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}" class="item-image">
-            <img src="{{ "/img/case-studies/cs-item-data-govt-nz.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
-          </a>
-          <div class="item-text">
-            <div class="item-text-head">
-              <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}">data.govt.nz</a></h2>
-              <h3 class="item-sub-heading"><a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}">StatsNZ and The Department of Internal Affairs</a></h3>
+      <div id="csi-dgnz" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-data-govt-nz.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}">data.govt.nz</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}">StatsNZ and the Department of Internal Affairs</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-desktop tip"></i>
+              <i class="icon icon-cog tip"></i>
             </div>
-            <div class="item-text-body">
-              <div class="item-icons">
-                <i class="icon icon-desktop tip"></i>
-                <i class="icon icon-cog tip"></i>
-              </div>
-              <p>Media Suite is partnered with a multi-agency public sector team working towards transparent government through proactive open data sharing. Data.govt.nz is an essential tool for the accelerated release and reuse of open government data.</p>
-              <a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
-            </div>
-          </div> <!--.item-text -->
-        </div>  <!-- .case-study-item -->
+            <p>Media Suite is partnered with a multi-agency public sector team working towards transparent government through proactive open data sharing. Data.govt.nz is an essential tool for the accelerated release and reuse of open government data.</p>
+            <a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+          </div>
+        </div>
+      </div>
 
       <div id="csi-tfc" class="case-study-item clearfix">
         <a href="{{ "/case-studies/journeys" | prepend: site.baseurl }}" class="item-image">
