Updated people page
Added:
Onkar
Alex

Removed:
Wayne
Hasan

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -130,6 +130,47 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Alex -->
+      <div id="person-alex" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/alex.png" | prepend: site.baseurl }}" alt="Alex Green" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Alex Green</h2>
+                  <h3 class="bio-sub">Agile Business Analyst</h3>
+                  <span class="linkedin-container">
+                    <a href="https://nz.linkedin.com/in/alexlgreen" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-alex.jpg" | prepend: site.baseurl }}" alt="Alex" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>If you’re after a football-mad dog person who can speak Dutch and loves electronica, Alex is your guy. He’s also a specialist in some useful things - like business analytics and data science, stakeholder relations and User Experience. Alex’s background is in industrial psychology, which sparked his interest in all things data. A recently returned Kiwi expat, he has previously worked for Stats NZ, Canterbury District Health Board, and a Dutch online accounting and business software company. When he’s not neck-deep in detail, he’s all about finding that perfect flat white, frequenting the local surf breaks, or producing some drum and bass tunes.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/alex"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Alex</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Andrew -->
       <div id="person-andrew" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -509,42 +550,6 @@ menuorder: 4
         </div>
         <!-- .bio-wrap -->
         <h3 class="person-name-hover">Greta</h3>
-      </div>
-      <!-- .person-wrap -->
-
-      <!-- Hasan -->
-      <div id="person-hasan" class="person-wrap js-iso-element">
-        <a href="#" class="person js-show-bio">
-          <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/hasan.png" | prepend: site.baseurl }}" alt="Hasan Rayan" />
-          <span class="burst-wrap scale-in">
-            <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
-            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
-          </span>
-        </a>
-        <div class="bio-wrap">
-          <div class="bio-inner">
-            <div class="faux-table">
-              <div class="faux-table-cell">
-                <div class="bio-head">
-                  <h2 class="bio-heading">Hasan Rayan</h2>
-                  <h3 class="bio-sub">Full Stack Developer</h3>
-                  <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-hasan.jpg" | prepend: site.baseurl }}" alt="Hasan" />
-                  </div>
-                </div>
-                <div class="bio-body">
-                  <p>Finally, someone’s moving from Australia to New Zealand! Hasan joins Media Suite from Perth, where he’s spent the last three years building apps and hunting for aliens (analysing and converting data from outer space for scientific research using computer software). This Syrian-born developer specialises in Python and Javascript, and has a history in business acceleration incubators in Dubai, satellite broadcasting and super-computing. Hasan is a former football player (now enthusiastic football watcher), movie lover and chess buff. His next stop is New Zealand, with his wife, two daughters, and a fish called Jack. </p>
-                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/hasan"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- .bio-inner -->
-        </div>
-        <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Hasan</h3>
       </div>
       <!-- .person-wrap -->
 
@@ -984,6 +989,47 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Onkar -->
+      <div id="person-onkar" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/onkar.png" | prepend: site.baseurl }}" alt="Onkar Tibe" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Onkar Tibe</h2>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <span class="linkedin-container">
+                    <a href="https://in.linkedin.com/in/onkartibe" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-onkar.jpg" | prepend: site.baseurl }}" alt="Onkar" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>You’ll be hard pressed to find someone more mad on cricket than Onkar. Keen for a taste of Kiwi culture and a life down under, this fanatical Team India supporter joins us from Pune, India. Onkar is a developer by trade, with a wealth of experience working with startup companies, developing smart software tools to empower businesses. He has a decade of experience hitting the ground running with systems and solution architecture, technical consultation and project management. Onkar has a passion for Python and is always keen to get back to his coding roots. A self-proclaimed “foodie” (eater of excellent food) he is a welcome addition to the Media Suite lunch club.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/onkar"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Onkar</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Pete -->
       <div id="person-pete" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -1219,47 +1265,6 @@ menuorder: 4
         </div>
         <!-- .bio-wrap -->
         <h3 class="person-name-hover">Tom</h3>
-      </div>
-      <!-- .person-wrap -->
-
-      <!-- Wayne -->
-      <div id="person-wayne" class="person-wrap js-iso-element">
-        <a href="#" class="person js-show-bio">
-          <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/wayne.png" | prepend: site.baseurl }}" alt="Wayne Carter" />
-          <span class="burst-wrap scale-in">
-            <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
-            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
-          </span>
-        </a>
-        <div class="bio-wrap">
-          <div class="bio-inner">
-            <div class="faux-table">
-              <div class="faux-table-cell">
-                <div class="bio-head">
-                  <h2 class="bio-heading">Wayne Carter</h2>
-                  <h3 class="bio-sub">Full Stack Developer</h3>
-                  <span class="linkedin-container">
-                    <a href="https://www.linkedin.com/in/wtcarter" class="linkedin-link" target="_blank">
-                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
-                    </a>
-                  </span>
-                  <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-wayne.jpg" | prepend: site.baseurl }}" alt="Wayne" />
-                  </div>
-                </div>
-                <div class="bio-body">
-                  <p>Wayne has been in software development since computers were pedal-powered and Whanganui was the place to be. A Full Stack dev with specialties in Ruby and Python, Wayne has 30 years experience in private and government work. These days, he likes being involved in projects that have meaningful impact on people’s lives. An opera singer and flat white enthusiast, you’ll find him off on a biking holiday with his wife, or hitting the Canterbury roads, hills or trails.</p>
-                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/wayne"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- .bio-inner -->
-        </div>
-        <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Wayne</h3>
       </div>
       <!-- .person-wrap -->
 
