Created new UC case study

--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -11,6 +11,26 @@ menuorder: 2
 
     <div class="case-study-items">
 
+      <div id="csi-uc" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/student-first-programme" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/uc-7.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/student-first-programme" | prepend: site.baseurl }}">Student First Programme</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/student-first-programme" | prepend: site.baseurl }}">The University of Canterbury</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-desktop tip"></i>
+              <i class="icon icon-cog tip"></i>
+            </div>
+            <p>The Student First Programme is a three year business change programme transforming student administration at the University of Canterbury.</p>
+            <a href="{{ "/case-studies/student-first-programme" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+          </div>
+        </div>
+      </div>
+
       <div id="csi-dgnz" class="case-study-item clearfix">
         <a href="{{ "/case-studies/data-govt-nz" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-data-govt-nz.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
