Tweaks to headings

--- a/src/case-studies/student-first-programme/index.html
+++ b/src/case-studies/student-first-programme/index.html
@@ -29,7 +29,7 @@ excerpt: The Student First Programme is a three year business change programme t
     <img src="{{ "/img/case-studies/uc-1.jpg" | prepend: site.baseurl }}" alt="Student First Programme" class="case-study-image image-max-100 space-below-please" />
 
     <div class="max-1000 align-left space-below-please">
-      <h2>Large Organisations, complex problems</h2>
+      <h2>Large organisations, complex problems</h2>
       <p>Most large organisations initiate major change programmes to address complex systemic problems head-on. When a company, organisation or institution is founded, it starts small. As it grows, it adapts. Systems are added here, new processes there. A handy piece of technology is slotted in, or a new team takes charge.</p>
       <p>This reactive adaptation keeps the business alive, typically at low cost.</p>
       <p>However, most large organisations will reach a breakpoint, where continued survival and prosperity requires considered, pre-emptive change - the type of change that sets up future success, market security and domain leadership. This kind of change is significantly more difficult, but allows the business to re-evaluate its offerings, and how it will continue to thrive. 
@@ -43,6 +43,8 @@ excerpt: The Student First Programme is a three year business change programme t
       <p>The UC vision is <em>‘People prepared to make a difference – tangata tū, tangata ora’</em>. The Student First Programme is contributing to that vision. It is responding to customer expectations for digital services and building competitive advantage with a bold business change programme, designed to modernise the student administration regulations, processes and systems.</p>
       <p>The programme itself is like an iceberg - the digital toolset users will see is only a small part of the change taking place, accessing the technical solutions that complement the deeper changes beneath the surface.</p>
       <p>Taking on change of this scale is no easy task. Just like any other large organisation, UC faces complex stakeholders, entrenched business rules and processes, organisational silos and legacy technology. Add to that a complex user group spanning domestic and international students, staff and business partners, and a whole industry undergoing a seismic culture shift.</p>
+
+      <img src="{{ "/img/case-studies/uc-2.jpg" | prepend: site.baseurl }}" alt="Studen First Programme - A whole lot of more below the surface" class="case-study-image image-max-100 space-below-please" />
       
       <h3>The changing face of education</h3>
       <p>Today’s tertiary students expect more. Their world is governed by technology. Services and goods are constantly at their fingertips.</p>
@@ -50,9 +52,6 @@ excerpt: The Student First Programme is a three year business change programme t
     </div>
     <div class="max-1000 align-left space-below-please">
       <h2>Student First Programme</h2>
-
-      <img src="{{ "/img/case-studies/uc-2.jpg" | prepend: site.baseurl }}" alt="Studen First Programme - A whole lot of more below the surface" class="case-study-image image-max-100 space-below-please" />
-
       <div class="panel-inner max-1000 clearfix">
         <div class="col third-col third-col--full">
           <img src="/img/case-studies/uc-3.png">
@@ -71,7 +70,7 @@ excerpt: The Student First Programme is a three year business change programme t
       <div class="quote-section clearfix">
         <img src="{{ "/img/case-studies/uc-6.png" | prepend: site.baseurl }}" alt="Mark Stuart" class="quote-image" />
         <div class="quote-container">
-          <h2 class="quote-heading">Technically speaking</h2>
+          <h3 class="quote-heading">Technically speaking</h3>
           <p class="quote-opening">The toolsets developed for UC have been created in a service oriented architecture. Developing components in this fashion allows for maximum accessibility, low-risk updates and changes, and a more efficient, more affordable ongoing service model. Pairing this architecture with a single page application and modern user interface further streamlines the system, ensuring a high quality user experience.</p>
           <p>Phasing out legacy technology on a large scale is challenging, especially when it is being gradually replaced by a new system. The programme has undertaken considered, incremental change to ensure minimal disruption and risk, while rolling out the various technical solutions. Components of the existing systems were ring-fenced, replaced and removed in a calculated fashion.</p>
           <p class="quote-closing">
@@ -80,11 +79,11 @@ excerpt: The Student First Programme is a three year business change programme t
         </div>
       </div>
 
-      <h2>A Multi-Vendor Team</h2>
+      <h3>A multi-vendor team</h3>
       <p>The multi-year programme requires a wide range of skill sets, long term commitment from vendors and buy-in from all stakeholders - internal and external. Media Suite is part of a multi-vendor team, working alongside the university’s internal ITS team and business units.</p>
       <p>Media Suite has provided a wide range of skill sets to the programme team, improving the enrolment experience for students and staff, maximising operational efficiency internally, and advocating for new ways of working. Over the term of the partnership Media Suite has contributed a multi-disciplined team of people spanning the areas of business analysis, technical leadership, software engineering, user experience design, user interface development, project management, strategic advice, agile coaching and service design.</p>
 
-      <h2>Benefits</h2>
+      <h3>Benefits</h3>
       <p>Despite the logistics, cost and risks, the benefits of digital-first business change that is supported and enabled by a strong vision for the future, are many.</p>
       <p>With fundamental elements of the programme now rolled out, the university is already seeing gains in student conversion and retention, securing its future as a leading tertiary institute. The university stands to drastically improve the student experience, making it simple, fast and certain, optimise efficiency and significantly reduce its technical debt. Aligning all systems, future proofing solutions, and eliminating legacy tools are cornerstones of future success.</p>
 
@@ -103,7 +102,7 @@ excerpt: The Student First Programme is a three year business change programme t
           <p class="quote-opening">Did my <a href="https://twitter.com/UCNZ" target="_blank">@UCNZ</a> application on Friday, got the enrolment offer within half an hour, accepted it, did the StudyLink thing on Saturday and woke up yesterday to find my student loan application had gone through! As of 18 Feb, I'll be studying at <a href="https://twitter.com/UCNZ" target="_blank">@UCNZ</a> - sorry Massey, not!</p>
           <p class="quote-closing">
             <span class="quote-closing-text">
-              Tweet from Stephanie Frazer <a href="https://twitter.com/billiebum" target="_blank">@billiebum</a>
+              Stephanie Frazer <a href="https://twitter.com/billiebum" target="_blank">@billiebum</a>
             </span>
           </p>
         </div>
