Changed meta image

--- a/src/case-studies/student-first-programme/index.html
+++ b/src/case-studies/student-first-programme/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Case Studies | Student First Programme
 casestudyname: Student First Programme
 casestudyid: 11
-image: /img/case-studies/resc-1.jpg
+image: /img/case-studies/uc-1.jpg
 excerpt: The Student First Programme is a three year business change programme transforming student administration at the University of Canterbury.
 ---
 <div id="main-wrap" class="internal-page case-study">
