Updated Jonathan's job title

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -653,7 +653,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Jonathan Hollingsworth</h2>
-                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <h3 class="bio-sub">Director of Software Development</h3>
                   <span class="linkedin-container">
                     <a href="https://www.linkedin.com/in/jon-hollingsworth-6b13145/" class="linkedin-link" target="_blank">
                       <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
