Updated years experience screen

--- a/src/index.html
+++ b/src/index.html
@@ -109,13 +109,13 @@ ishome: true
                 <li class="montage layer" data-depth="0.25"><img src="{{ "/img/all-the-things.jpg" | prepend: site.baseurl }}" alt="" /></li>
               </ul>
               <div id="history-text">
-                <h3><span class="hidden">15 </span>years</h3>
+                <h3><span class="hidden">18 </span>years</h3>
               </div>
             </div> <!-- .col-half -->
             <div id="work-panel-content" class="col col-half">
               <p class="fancy-pants-font">At the heart of our work lies our diverse range of clients.</p>
-              <p>In the last 15 years we have worked on over 1,400 projects for about 350 clients.</p>
-              <a href="{{ "/case-studies" | prepend: site.baseurl }}" class="drop-btn orange-bg">View our portfolio</a>
+              <p>In the last 18 years we have worked on over 1,400 projects for about 350 clients.</p>
+              <a href="{{ "/case-studies" | prepend: site.baseurl }}" class="drop-btn orange-bg">View our case studies</a>
             </div> <!-- .col-half -->
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
