Updated logos on home page

--- a/src/index.html
+++ b/src/index.html
@@ -84,9 +84,9 @@ ishome: true
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/13-auckland-transport.jpg" | prepend: site.baseurl }}" alt="Auckland Transport" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/5-mdc.png" | prepend: site.baseurl }}" alt="" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/7-interlead.png" | prepend: site.baseurl }}" alt="" /></span></li>
-            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/8-addington.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/8-dia.png" | prepend: site.baseurl }}" alt="" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill square-logo" data-no-instant><img src="{{ "/img/client-logos/9-acc.png" | prepend: site.baseurl }}" alt="" /></span></li>
-            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/10-mrc.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/10-ecan.png" | prepend: site.baseurl }}" alt="" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill square-logo" data-no-instant><img src="{{ "/img/client-logos/12-discover-travel.png" | prepend: site.baseurl }}" alt="" /></span></li>
           </ul>
 
